# learnCpp

./: .gitignore  CMakeLists.txt  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  InputHandler.cpp  InputHandler.h  Level.cpp  Level.h  Player.cpp  Player.h  Rectangle.cpp  Rectangle.h  RenderWindow.cpp  RenderWindow.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  main.cpp  zettel.txt
res/: atlas.json  atlas.tps  level1.json
